--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "connect": "^3.7.0",
     "express": "^4.17.1",
+    "jade": "^1.11.0",
     "mongodb": "^3.3.0-beta2",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "pug": "^2.0.4"
   },
   "devDependencies": {},
   "scripts": {
