--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "app.js",
   "dependencies": {
     "connect": "^3.7.0",
+    "constantinople": "^3.1.2",
     "express": "^4.17.1",
-    "jade": "^1.11.0",
     "mongodb": "^3.3.0-beta2",
     "nodemon": "^1.19.1",
     "pug": "^2.0.4"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [
     "technik"
